@@ -27,7 +27,7 @@
  ** 									     ** 
  ** ************************************************************************ **/
 
-static char Id[] = "@(#)$Id: ModuleCmd_Display.c,v 1.9 2009/08/23 23:30:42 rkowen Exp $";
+static char Id[] = "@(#)$Id: ModuleCmd_Display.c,v 1.10 2011/10/06 19:19:03 rkowen Exp $";
 static void *UseId[] = { &UseId, Id };
 
 /** ************************************************************************ **/
@@ -127,9 +127,9 @@ int ModuleCmd_Display(	Tcl_Interp	*interp,
 
         g_specified_module = argv[i];
 
-	disp_interp = Tcl_CreateInterp();
+	disp_interp = EM_CreateInterp();
 	if( TCL_OK != (result = Module_Init( disp_interp))) {
-	    Tcl_DeleteInterp( disp_interp);
+	    EM_DeleteInterp( disp_interp);
 	    return( result);		/** -------- EXIT (FAILURE) -------> **/
 	}
 
@@ -139,7 +139,7 @@ int ModuleCmd_Display(	Tcl_Interp	*interp,
 
 	if( Locate_ModuleFile(disp_interp, argv[i], modulename, modulefile) == 
             TCL_ERROR) {
-	    Tcl_DeleteInterp( disp_interp);
+	    EM_DeleteInterp( disp_interp);
 	    if( OK != ErrorLogger( ERR_LOCATE, LOC, argv[i], NULL)) 
 		break;
 	    else
@@ -165,7 +165,7 @@ int ModuleCmd_Display(	Tcl_Interp	*interp,
 	 **  Remove the Tcl interpreter that has been used for printing ...
 	 **/
 
-	Tcl_DeleteInterp( disp_interp);
+	EM_DeleteInterp( disp_interp);
 
     } /** for **/
 
