@@ -31,11 +31,15 @@ modules 3.3.0
 	* Reworked configuration and Makefile for fine-grain control of
 	  certain paths and config files.
 	* Removed the $MODULESHOME env.var. which is not used at all.
-	* Fixed the module purge corruption (Poor Yorick)
+	* Fixed the "module purge" memory corruption (Poor Yorick)
+	* Isolated calls to the new interpreter and get & set env.vars.
 
 ****************************   Release 3.2 ******************************
 Modules 3.2.9
 	* Fix the coexistence of load/remove flags (Martin Siegert)
+	* Fixed an overlapping string copy (Wilson Snyder & Orion Poplawski)
+	* Isolated calls to the new interpreter and get & set env.vars.
+	* Optionally use Tcl memory check routines for malloc/realloc.
 
 Modules 3.2.8
 Oct  1, 2010				R.K. Owen (rk@owen.sj.ca.us)
